--- a/workshop/content/Intro.adoc
+++ b/workshop/content/Intro.adoc
@@ -1,45 +1,35 @@
-== 1.0 Accessing the Lab Environment
+:USER_GUID: %GUID%
+:USERNAME: %user%
+:CLUSTER: %cluster%
 
-Your instructor will provide you with the following information for your lab environment:
 
-=== 1.0.1 OpenShift 3.11 Cluster
+== Red Hat Summit 2020: OpenShift Application Migration Lab
 
-[cols=",",options="header",]
-|===
-|Key |Value
-|GUID |
-|OCP Console |https://master.GUID.open.redhat.com/console
-|Password |r3dh4t1!
-|API |https://master.deb9.open.redhat.com
-|Bastion Host |bastion.GUID.open.redhat.com
-|Bastion SSH |lab-user/r3dh4t1!
-|===
+=== Migrating Applications from OCP/OCS 3 to OCP/OCS 4
 
-=== 1.0.2 OpenShift 4.3 Cluster
+This guide will provide you with hands-on exposure to the OpenShift Migration Tooling through a series of exercises migrating application workloads (both stateful and stateless) between OpenShift Clusters.
 
-[width="100%",cols="50%,50%",options="header",]
-|===
-|Key |Value
-|GUID |
-|OCP Console |http://console-openshift-console.apps.cluster-GUID.GUID.example.opentlc.com
-|Password |r3dh4t1!
-|API |https://api.cluster-GUID.GUID.example.opentlc.com:6443
-|Bastion Host |bastion.GUID.example.opentlc.com
-|Bastion SSH |lab-user/r3dh4t1!
-|===
+=== Goals
 
-=== 1.2 Lab Environment Overview
+In this instructor-led, hands-on lab, you’ll experience:
 
-image:screenshots/lab1/lab-env-overview.png[Lab Environment Overview]
+* Migrating applications from Red Hat OpenShift 3 clusters to Red Hat OpenShift 4 clusters using the Cluster Application Migration Tool (CAM) provided by OpenShift Container Platform 4.3.
+* Use cases that migrate applications preserving state, including how to migrate OpenShift Container Storage 3 (Gluster) to OpenShift Container Storage 4 (Ceph).
 
-==== 1.2.1 SSH Hosts
+=== Labs
 
-[cols=",,,",options="header",]
-|===
-|Hostname |User |Password |Description
-|`bastion.<guid>.domain` |lab-user |r3dh4t1! |bastion host for 3.11 environment
-|`bastion.<guid>.domain` |lab-user |r3dh4t1! |client-vm for 4.3 environment
-|===
+link:./1.adoc[Lab 1 - Introduction] +
+link:./2.adoc[Lab 2 - Prerequisites and Setup] +
+link:./3.adoc[Lab 3 - CAM Overview] +
+link:./4.adoc[Lab 4 - Migrate File-Uploader Application] +
+link:./5.adoc[Lab 5 - Migrate MSSQL Server Application] +
+link:./6.adoc[Lab 6 - Migrate Sock-Shop Application] +
+link:./7.adoc[Lab 7 - Debugging Failed Migrations] +
+link:./8.adoc[Lab 8 - Migration at Scale via API] +
+link:./9.adoc[Lab 9 - Wrap Up]
 
-Next Lab: link:./2.adoc[Lab 2 - Prerequisites and Setup] +
-link:./README.adoc[Home]
+=== GUID
+
+* GUID is {USER_GUID}
+
+
