--- a/workshop/content/Intro.adoc
+++ b/workshop/content/Intro.adoc
@@ -3,7 +3,7 @@
 :CLUSTER: %cluster%
 
 
-== Red Hat Summit 2020: OpenShift Application Migration Lab
+== OpenShift Application Migration Lab
 
 === Migrating Applications from OCP/OCS 3 to OCP/OCS 4
 
@@ -31,5 +31,3 @@ link:./9.adoc[Lab 9 - Wrap Up]
 === GUID
 
 * GUID is {USER_GUID}
-
-
