--- a/workshop/content/Environment.adoc
+++ b/workshop/content/Environment.adoc
@@ -1,17 +1,27 @@
-== 1.0 Accessing the Lab Environment
+:OCP3_GUID: %OCP3_GUID%
+:OCP3_DOMAIN: %OCP3_DOMAIN%
+:OCP4_GUID: %OCP4_GUID%
+:OCP4_DOMAIN: %OCP4_DOMAIN%
 
-Your instructor will provide you with the following information for your lab environment:
+:USERNAME: %user%
+:CLUSTER: %cluster%
+
+== 1.0 Lab Environment Overview
+
+The following lab environment has been provisioned for you for use with this Lab:
+
+image:screenshots/lab1/lab-env-overview.png[Lab Environment Overview]
 
 === 1.0.1 OpenShift 3.11 Cluster
 
-[cols=",",options="header",]
+[width="100%",cols="50%,50%",options="header",]
 |===
 |Key |Value
-|GUID |
-|OCP Console |https://master.GUID.open.redhat.com/console
+|GUID | {OCP3_GUID}
+|OCP Console |https://master.{OCP3_GUID}.{OCP3_DOMAIN}/console
 |Password |r3dh4t1!
-|API |https://master.deb9.open.redhat.com
-|Bastion Host |bastion.GUID.open.redhat.com
+|API |https://master.{OCP3_GUID}.{OCP3_DOMAIN}
+|Bastion Host |bastion.{OCP3_GUID}.{OCP3_DOMAIN}
 |Bastion SSH |lab-user/r3dh4t1!
 |===
 
@@ -20,26 +30,10 @@ Your instructor will provide you with the following information for your lab env
 [width="100%",cols="50%,50%",options="header",]
 |===
 |Key |Value
-|GUID |
-|OCP Console |http://console-openshift-console.apps.cluster-GUID.GUID.example.opentlc.com
+|GUID | {OCP4_GUID}
+|OCP Console |http://console-openshift-console.apps.cluster-{OCP4_GUID}.{OCP4_GUID}.{OCP4_DOMAIN}
 |Password |r3dh4t1!
-|API |https://api.cluster-GUID.GUID.example.opentlc.com:6443
-|Bastion Host |bastion.GUID.example.opentlc.com
+|API |https://api.cluster-{OCP4_GUID}.{OCP4_GUID}.{OCP4_DOMAIN}:6443
+|Bastion Host |bastion.{OCP4_GUID}.{OCP4_DOMAIN}
 |Bastion SSH |lab-user/r3dh4t1!
 |===
-
-=== 1.2 Lab Environment Overview
-
-image:screenshots/lab1/lab-env-overview.png[Lab Environment Overview]
-
-==== 1.2.1 SSH Hosts
-
-[cols=",,,",options="header",]
-|===
-|Hostname |User |Password |Description
-|`bastion.<guid>.domain` |lab-user |r3dh4t1! |bastion host for 3.11 environment
-|`bastion.<guid>.domain` |lab-user |r3dh4t1! |client-vm for 4.3 environment
-|===
-
-Next Lab: link:./2.adoc[Lab 2 - Prerequisites and Setup] +
-link:./README.adoc[Home]
