--- a/workshop/content/Intro.adoc
+++ b/workshop/content/Intro.adoc
@@ -7,14 +7,20 @@
 
 === Migrating Applications from OCP/OCS 3 to OCP/OCS 4
 
-This guide will provide you with hands-on exposure to the OpenShift Migration Tooling through a series of exercises migrating application workloads (both stateful and stateless) between OpenShift Clusters.
+This guide will provide you with hands-on exposure to the OpenShift Migration +
+Tooling through a series of exercises migrating application workloads (both +
+stateful and stateless) between OpenShift Clusters.
 
 === Goals
 
 In this instructor-led, hands-on lab, you’ll experience:
 
-* Migrating applications from Red Hat OpenShift 3 clusters to Red Hat OpenShift 4 clusters using the Cluster Application Migration Tool (CAM) provided by OpenShift Container Platform 4.3.
-* Use cases that migrate applications preserving state, including how to migrate OpenShift Container Storage 3 (Gluster) to OpenShift Container Storage 4 (Ceph).
+* Migrating applications from Red Hat OpenShift 3 clusters to Red Hat OpenShift +
+4 clusters using the Cluster Application Migration Tool (CAM) provided by OpenShift +
+Container Platform 4.3.
+
+* Use cases that migrate applications preserving state, including how to migrate +
+OpenShift Container Storage 3 (Gluster) to OpenShift Container Storage 4 (Ceph).
 
 === Modules
 
