--- a/workshop/content/Prereqs.adoc
+++ b/workshop/content/Prereqs.adoc
@@ -35,7 +35,7 @@ let's go ahead and ssh into the bastion host, and then login into the OCP3.11 cl
 
 [subs=+quotes]
 --------------------------------------------------------------------------------
-$ **ssh {OCP3_SSH_USER}@bastion.{OCP3_GUID}.{OCP3_DOMAIN}**
+$ **ssh \{OCP3_SSH_USER\}@bastion.\{OCP3_GUID\}.\{OCP3_DOMAIN\}**
 {OCP3_SSH_USER}@bastion.{OCP3_GUID}.{OCP3_DOMAIN}'s password:
 Last login: Sun Mar 22 21:22:55 2020 from 66.26.68.90
 [{OCP3_SSH_USER}@bastion 0 ~]$
