--- a/workshop/content/Overview.adoc
+++ b/workshop/content/Overview.adoc
@@ -1,14 +1,22 @@
-== 3.0 Cluster Application Migration Tool (CAM)
+:markup-in-source: verbatim,attributes,quotes
+:OCP3_GUID: %OCP3_GUID%
+:OCP3_DOMAIN: %OCP3_DOMAIN%
+:OCP3_SSH_USER: %OCP3_SSH_USER%
+:OCP3_PASSWORD: %OCP3_PASSWORD%
+:OCP4_GUID: %OCP4_GUID%
+:OCP4_DOMAIN: %OCP4_DOMAIN%
+:OCP4_SSH_USER: %OCP4_SSH_USER%
+:OCP4_PASSWORD: %OCP4_PASSWORD%
 
 CAM is designed to migrate Application Workloads between OpenShift clusters. Specifically, CAM handles migration of k8s resource objects, persistent volumes, and internal images. CAM is designed to provide a migration experience while focusing on minimizing application downtime through the process.
 
-=== 3.1 Upstream Projects
+=== Upstream Projects
 
 CAM leverages two upstream projects: https://github.com/heptio/velero[Velero] and https://restic.net/[Restic]. Velero (formerly Heptio Ark) gives you tools to back up and restore your Kubernetes cluster resources and persistent volumes. Restic is a backup program that is fast, efficient and secure.
 
 image:./screenshots/lab3/velero.png[Velero Logo]
 
-=== 3.2 Architecture
+=== Architecture
 
 CAM is implemented as a native k8s API extension through a custom resource definition. CAM orchestrates usage of Velero for performing backup/restores. OpenShift specific functionality is implemented in a series of Velero plugins. CAM is also equipped with a React/Patternfly 4 web UI to provide simple interactive experience.
 
@@ -19,7 +27,7 @@ Future versions will allow selecting resources inside of a Namespace.
 IMPORTANT: `cluster-admin` role required for initial release targeting OCP 4.2. +
 Future versions will allow for application owners to plan and execute migrations.
 
-=== 3.3 Persistent Volume Handling
+=== Persistent Volume Handling
 
 CAM provides two methods for migrating persistent volumes:
 
@@ -31,7 +39,7 @@ Copy:: Copy creates a copy of the data from source cluster into the destination 
 
 image:./screenshots/lab3/copypv.png[Copy PV Diagram]
 
-=== 3.4 Actions (Stage and Migrate)
+=== Actions (Stage and Migrate)
 
 CAM introduces two actions on a Migration Plan:
 
@@ -44,7 +52,7 @@ NOTE: Stage can be run multiple times on a Migration Plan
 
 NOTE: Migrate can only be run once.
 
-=== 3.5 Migration Process
+=== Migration Process
 
 image:./screenshots/lab3/mig-process.png[Migration Process]
 
@@ -74,19 +82,15 @@ There are 3 steps to the migration process within the CAM tool:
 
 Let’s bring up the webUI in preparation for our first Application Migration in Lab 4. In the destination 4.3 cluster terminal, let’s run the following commands to get the route:
 
-[subs=+quotes]
+[source,subs="{markup-in-source}"]
 --------------------------------------------------------------------------------
 $ **oc get routes migration -n openshift-migration -o jsonpath='{.spec.host}'**
 migration-openshift-migration.apps.cluster-d7fd.d7fd.example.opentlc.com\
 --------------------------------------------------------------------------------
 
 Next, open a browser to: +
-https://migration-openshift-migration.apps.cluster-GUID.GUID.example.opentlc.com
+https://migration-openshift-migration.apps.cluster-{OCP4_GUID}.{OCP4_GUID}.{OCP4_DOMAIN}
 
 image:./screenshots/lab3/cam-main-screen.png[CAM Main Screen]
 
 We are now ready to perform our first Application Migration.
-
-Next Lab: link:./4.adoc[Lab 4 - Migrate File-Uploader Application] +
-Previous Lab: link:./2.adoc[Lab 2 - Prerequisites and Setup] +
-link:./README.adoc[Home]
